Date	Added

01/27
        * Added @changelook command for spriters to test view ID's [celest]
        * Added a check to Pneuma to prevent crashing [celest]
        * Tweaked garbage collection code after feedback from users
        [SVN 1002: MouseJstr]
	* Fixed TRADE exploits (it cures proxy hack / vending+trade hack) thanks to Freya [Lupus]

01/26
        * Added bug fix for a memory leak caused when a character logs out,
          by End_of_exam / jA 1108 [celest]
        * Fixed a bug in gettick cache when compiling in Windows, thanks to Shinomori
          (jA 1094) [celest]
        * Added updates from jA 1092 [celest]
          - Changed "read_map_from_bitmap" to "read_map_from_cache",
            "map_bitmap_path" to "map_cache_file" in map_athena
          - Fixed item effects not showing when only one was used
          - Fixed a bug in Safety Wall
          - Allow only either Storm Gust or Lord of Vermillion to cause damage if
            stacked together
          - Added path_search_long, map_find_skill_unit_oncell

        * Added status_get_sc_def for calculating resistance against status
          abnormalities [celest]
        * Added status.c and status.h of jA 1091 update and moved some functions into
          the new source files:
          -- skill_status_change_  ->  status_change_
          -- battle_get_  ->  status_get_
          -- pc_calc_  ->  status_calc_
          -- pc_getrefinebonus and pc_percentrefinery  ->  status_getrefinebonus and
             status_percentrefinery

        * Updated auto_counter_type's description in battle_athena, thanks to 
          akusarujin for pointing it out [celest]
        * Removed some unnecessary skill level checks in battle.c [celest]
        * Removed my changes to /stable/Makefile which has libGC enabled by default
          that i've accidentally commited, sorry ^^; [celest]
        * Removed an unnecessary "cloneskill_lv" from map_session_data [celest]